--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.css">
-  <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap-grid.css">
+  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap.css">
+  <link rel="stylesheet" href="bootstrap-grid.css">
   <link rel="stylesheet" href="style.css">
   <title>lect_3_soln</title>
-  <script src="bootstrap-4.5.0-dist/js/jquery-3.5.1.min.js"></script>
-  <script src="bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
-  <script src="bootstrap-4.5.0-dist/js/jquery-3.5.1.slim.min.js"></script>
+  <script src="jquery-3.5.1.min.js"></script>
+  <script src="bootstrap.min.js"></script>
+  <script src="jquery-3.5.1.slim.min.js"></script>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
 
-        <div><a class="navbar-brand" href="index.html">Food LCC</a></div>
+        <div><a class="navbar-brand" href="index.html">Food,LLC</a></div>
       </div>
       <button type="button" class="navbar-toggle collapsed d-lg-none" data-toggle="collapse"
         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
