--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/fontawesome.css">
     <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/all.css">
     <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/fontawesome.min.css">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap-social-gh-pages/bootstrap-social.css">
+    <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
